# Tauri-Bevy-Demo

./: REFACTORING_SUMMARY.md  package.json  vite.config.ts
.cursor/rules/: frontend-design.mdc  project-guide.mdc  tauri.mdc
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: headless_render.rs
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/bevy/: app.rs  components.rs  mod.rs  resources.rs
src-tauri/src/bevy/plugins/: image_copy.rs  mod.rs
src-tauri/src/bevy/systems/: animation.rs  camera.rs  frame_extraction.rs  mod.rs  scene.rs
src-tauri/src/tauri_bridge/: commands.rs  mod.rs  protocol.rs  shared_state.rs
